--- a/ansible/templates/gameserver/ctf-gameserver.ini
+++ b/ansible/templates/gameserver/ctf-gameserver.ini
@@ -1,8 +1,9 @@
 [uwsgi]
+uid = www-data
+gid = www-data
+processes = 1
+threads = 4
+module = django.core.wsgi:get_wsgi_application()
 plugins = python3
-uwsgi-socket = /run/uwsgi/ctf-gameserver.sock
-python-path = /etc/ctf-gameserver/web
-module = ctf_gameserver.web.wsgi:application
+python-path=/etc/ctf-gameserver/web
 env = DJANGO_SETTINGS_MODULE=prod_settings
-master = True
-vacuum = True
